--- a/test.yml
+++ b/test.yml
@@ -11,6 +11,8 @@ jobs:
             
             - name: Print HTML content
               run: cat index.html 
-            
+            - name: List file
+              run: ls -la
+
  
  
